--- a/.env
+++ b/.env
@@ -4,5 +4,5 @@ JWT_SECRET = "humpydumpty"
 KNEX_DATABASE=to_do_app
 KNEX_USER=postgres
 KNEX_PASSWORD=wizzy0112
-DATABASE_URL=postgres://postgres:wizzy0112@localhost:5432/to_do_app
+HEROKU_POSTGRESQL_PUCE_URL=postgres://postgres:wizzy0112@localhost:5432/to_do_app
 CORS_ORIGIN_URL = "http://localhost:3000"
